add actions and menu item

--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -79,7 +79,7 @@
             <section>
                 <item>
                     <attribute name="label" translatable="yes">Preferences ...</attribute>
-                    <attribute name="action">app.preferences</attribute>
+                    <attribute name="action">win.preferences</attribute>
                 </item>
             </section>
         </submenu>
