--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -88,7 +88,7 @@
             <section>
                 <item>
                     <attribute name="label" translatable="yes">About</attribute>
-                    <attribute name="action">app.about</attribute>
+                    <attribute name="action">win.about</attribute>
                 </item>
             </section>
         </submenu>
