--- a/gtk4/oxide/assets/ui/preferences.ui
+++ b/gtk4/oxide/assets/ui/preferences.ui
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-    <template class="AboutWindow" parent="GtkWindow">
+    <template class="PreferencesWindow" parent="GtkWindow">
         <property name="default-width">400</property>
         <property name="default-height">300</property>
         <property name="resizable">false</property>
-        <!-- <property name="type-hint">dialog</property> -->
         <property name="modal">true</property>
-        <property name="title">About</property>
+        <property name="title">Preferences</property>
 
         <child>
             <object class="GtkBox">
                 <property name="orientation">vertical</property>
 
-                <child>
+                <child>s
                     <object class="GtkLabel">
-                        <property name="label" translatable="yes">About Oxide</property>
+                        <property name="label" translatable="yes">Preferences</property>
                         <property name="halign">center</property>
                         <property name="margin-top">20</property>
                         <property name="margin-bottom">10</property>
