add rfd crate. add file open action and dialog to select a folder.

--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -40,7 +40,7 @@
                 </item>
                 <item>
                     <attribute name="label" translatable="yes">Open</attribute>
-                    <attribute name="action">app.open</attribute>
+                    <attribute name="action">win.file.open</attribute>
                 </item>
             </section>
             <section>
