--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -140,6 +140,13 @@
                         <child>
                             <object class="GtkFrame">
                                 <property name="label">frame 1</property>
+
+                                <child>
+                                    <object class="GtkTreeView" id="files">
+                                        <property name="hexpand">true</property>
+                                        <property name="vexpand">true</property>
+                                    </object>
+                                </child>
                             </object>
                         </child>
                         <child>
