add columnview, going to try and implement tree view later on

--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -142,7 +142,7 @@
                                 <property name="label">frame 1</property>
 
                                 <child>
-                                    <object class="GtkTreeView" id="files">
+                                    <object class="GtkColumnView" id="files">
                                         <property name="hexpand">true</property>
                                         <property name="vexpand">true</property>
                                     </object>
