--- a/gtk4/oxide/assets/ui/main_window.ui
+++ b/gtk4/oxide/assets/ui/main_window.ui
@@ -95,8 +95,8 @@
     </menu>
 
     <template class="MainWindow" parent="GtkApplicationWindow">
-        <property name="default-width">600</property>
-        <property name="default-height">300</property>
+        <property name="default-width">800</property>
+        <property name="default-height">600</property>
         <property name="title">Oxide</property>
 
         <child type="titlebar">
@@ -142,9 +142,16 @@
                                 <property name="label">frame 1</property>
 
                                 <child>
-                                    <object class="GtkColumnView" id="files">
+                                    <object class="GtkScrolledWindow">
                                         <property name="hexpand">true</property>
                                         <property name="vexpand">true</property>
+
+                                        <child>
+                                            <object class="GtkColumnView" id="files">
+                                                <property name="hexpand">true</property>
+                                                <property name="vexpand">true</property>
+                                            </object>
+                                        </child>
                                     </object>
                                 </child>
                             </object>
